# discord_trader

./: .gitignore  KrakenDataPlotter.py  README.md  bot.py  logger_config.py  main.py  main_test.py  manual_plot.py  plot.py  pyproject.toml  test_plot.py  util.py
bitget/: README.md  bitget.md  bitget.py  main.py  trader.py  utils.py
bot/: bot.py  data_bot.py  kraken_data.py  plot.py  plot_bot.py  super_data_bot.py  utils.py
bots/: KrakenDataPlotter.py  plot_bot.py  plot_candlestick_with_bollinger.py  trading_bot.py  util.py
mock_data/: kraken_trades_btc.json
output/: 2023-08-25.csv  2023-09-27.csv  2023-09-27_bfill.csv  2023-09-27_ffill.csv  2023-09-27_nofill.csv  2023-09-27_original.csv  one_min_ohlc.csv
output/1T/: 2023-09-27.csv
tests/: test_bitget.py
